--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ CAROUSEL
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    /* display: none; */
+    display: none;
 }
 
 #carousel #gallery .description-image{
@@ -25,7 +25,7 @@ CAROUSEL
     top: 10px;
     right: 20px;
     color: #fff;
-
+    display: none;
 }
 
 #carousel #gallery .active{
